# target-ADTs-library

./: CMakeLists.txt  README.md
include/: ISequence.hpp  SequenceUI.hpp  SequenceUnzipHelper.hpp
include/Immutable/: ImmutableSequence.hpp
include/Immutable/Array/: ArrayImmutableSequence.hpp
include/Immutable/List/: ListImmutableSequence.hpp
include/Muttable/: MutableSequence.hpp
include/Muttable/Array/: ArrayMutableSequence.hpp
include/Muttable/List/: ListMutableSequence.hpp
include/SpecializedADT/: Deque.hpp  PriorityDeque.hpp  Queue.hpp  SegmentedDeque.hpp  Stream.hpp
include/core/: DynamicArray.hpp  LinkedList.hpp
src/: Demo.cpp  SenderClient.cpp  SequenceUI.cpp  StreamServer.cpp
test/: SequenceTest.cpp
